{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 117,
  "lineage": "89064cfa-1ecc-eeba-e81e-721ad134705c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015e4bc87d9ff38e5",
            "domain": "vpc",
            "id": "eipalloc-015e4bc87d9ff38e5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-216-22-197.compute-1.amazonaws.com",
            "public_ip": "44.216.22.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT elastic IP"
            },
            "tags_all": {
              "Name": "NAT elastic IP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.public-gw",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:internet-gateway/igw-08282919044406533",
            "id": "igw-08282919044406533",
            "owner_id": "474441034736",
            "tags": {
              "Name": "public-gw"
            },
            "tags_all": {
              "Name": "public-gw"
            },
            "vpc_id": "vpc-00902745fde40e5b0"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015e4bc87d9ff38e5",
            "association_id": "eipassoc-0956284e37dd6c9cd",
            "connectivity_type": "public",
            "id": "nat-0a15dd84ff39966f5",
            "network_interface_id": "eni-0e1d4019b354d7ee2",
            "private_ip": "10.0.1.65",
            "public_ip": "44.216.22.197",
            "subnet_id": "subnet-02624b0423132a7b3",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.public-gw",
            "aws_subnet.main-public",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:route-table/rtb-06f055d29a3ad773c",
            "id": "rtb-06f055d29a3ad773c",
            "owner_id": "474441034736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a15dd84ff39966f5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table 1"
            },
            "tags_all": {
              "Name": "Private route table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00902745fde40e5b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.public-gw",
            "aws_nat_gateway.nat",
            "aws_subnet.main-public",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:route-table/rtb-0524dfe3a7b21d50f",
            "id": "rtb-0524dfe3a7b21d50f",
            "owner_id": "474441034736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a15dd84ff39966f5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private route table 2"
            },
            "tags_all": {
              "Name": "Private route table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00902745fde40e5b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.public-gw",
            "aws_nat_gateway.nat",
            "aws_subnet.main-public",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:route-table/rtb-01f8df151bcf7acd8",
            "id": "rtb-01f8df151bcf7acd8",
            "owner_id": "474441034736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08282919044406533",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-00902745fde40e5b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public-gw",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07da47975a32f4177",
            "route_table_id": "rtb-0524dfe3a7b21d50f",
            "subnet_id": "subnet-0ace989197cfb8399"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.public-gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt2",
            "aws_subnet.main-private-2",
            "aws_subnet.main-public",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da2f5df8d021bee6",
            "route_table_id": "rtb-06f055d29a3ad773c",
            "subnet_id": "subnet-090d9dc9aa4386ce4"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.public-gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt1",
            "aws_subnet.main-private-1",
            "aws_subnet.main-public",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb3ef62d1be091ed",
            "route_table_id": "rtb-01f8df151bcf7acd8",
            "subnet_id": "subnet-02624b0423132a7b3"
          },
          "dependencies": [
            "aws_internet_gateway.public-gw",
            "aws_route_table.public-route",
            "aws_subnet.main-public",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:security-group/sg-0c77b6d037445da8f",
            "description": "Allow limited inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c77b6d037445da8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-ec2-private-security-group",
            "name_prefix": "",
            "owner_id": "474441034736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ec2-private-sg"
            },
            "tags_all": {
              "Name": "Ec2-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00902745fde40e5b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:subnet/subnet-090d9dc9aa4386ce4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090d9dc9aa4386ce4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474441034736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private-us-east-1b"
            },
            "tags_all": {
              "Name": "main-private-us-east-1b"
            },
            "vpc_id": "vpc-00902745fde40e5b0"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:subnet/subnet-0ace989197cfb8399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ace989197cfb8399",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474441034736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private-us-east-1c"
            },
            "tags_all": {
              "Name": "main-private-us-east-1c"
            },
            "vpc_id": "vpc-00902745fde40e5b0"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:subnet/subnet-07bab52116199ace5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bab52116199ace5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474441034736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private-us-east-1d"
            },
            "tags_all": {
              "Name": "main-private-us-east-1d"
            },
            "vpc_id": "vpc-00902745fde40e5b0"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:subnet/subnet-02624b0423132a7b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02624b0423132a7b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "474441034736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public-us-east-1a"
            },
            "tags_all": {
              "Name": "main-public-us-east-1a"
            },
            "vpc_id": "vpc-00902745fde40e5b0"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474441034736:vpc/vpc-00902745fde40e5b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0408d2a78f49881a7",
            "default_route_table_id": "rtb-076ae6864f5186feb",
            "default_security_group_id": "sg-0418987b2f055352a",
            "dhcp_options_id": "dopt-fc99fe86",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00902745fde40e5b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076ae6864f5186feb",
            "owner_id": "474441034736",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}